syntax = "proto3";

option go_package = "github.com/kong/koko/internal/gen/wrpc/kong/model;model";

package kong.model;

import "kong/model/certificate.proto";

message Upstream {
  string id = 1;
  string name = 2;
  string host_header = 3;
  Certificate client_certificate = 4;
  string algorithm = 5;
  int64 slots = 6;
  Healthcheck healthchecks = 7;
  int64 created_at = 8;
  string hash_on = 9;
  string hash_fallback = 10;
  string hash_on_header = 11;
  string hash_fallback_header = 12;
  string hash_on_cookie = 13;
  string hash_on_cookie_path = 14;
  repeated string tags = 15;
}

message Healthcheck {
  ActiveHealthcheck active = 1;
  PassiveHealthcheck passive = 2;
  double threshold = 3;
}

message ActiveHealthcheck {
  int64 concurrency = 1;
  ActiveHealthy healthy = 2;
  string http_path = 3;
  string https_sni = 4;
  bool https_verify_certificate = 5;
  string type = 6;
  int64 timeout = 7;
  ActiveUnhealthy unhealthy = 8;
}

message PassiveHealthcheck {
  PassiveHealthy healthy = 1;
  string type = 2;
  PassiveUnhealthy unhealthy = 3;
}

message ActiveHealthy {
  repeated int64 http_statuses = 1;
  int64 interval = 2;
  int64 successes = 3;
}

message ActiveUnhealthy {
  int64 http_failures = 1;
  repeated int64 http_statuses = 2;
  int64 tcp_failures = 3;
  int64 timeouts = 4;
  int64 interval = 5;
}

message PassiveHealthy {
  repeated int64 http_statuses = 1;
  int64 successes = 2;
}

message PassiveUnhealthy {
  int64 http_failures = 1;
  repeated int64 http_statuses = 2;
  int64 tcp_failures = 3;
  int64 timeouts = 4;
}
